Hugo: Fix scrolling issues in codeblock
- Move highlight config from config.toml to markup.toml
- Make sure horizontal overflow doesn't get wrapped but gets a scrollbar
- Make sure vertical overflow for pre doesn't get cut of but shows
  all content. Remove height: 100% from css because this only works when
  pre or highlight is the only child which is not the case.
- Use flex to make last highlight or pre tag in a column fill out the
  remaining space.

For: https://linear.app/usmedia/issue/CUE-177 and
     https://linear.app/usmedia/issue/CUE-176

Closes #330 as merged.

--- a/hugo/assets/scss/components/columns.scss
+++ b/hugo/assets/scss/components/columns.scss
@@ -18,6 +18,19 @@
             flex: 0 1 50%;
             flex-direction: column;
             max-width: 50%;
+
+            // Make sure codeblocks fill all available space inside column
+            > pre:last-child {
+                flex: 1 0 auto;
+            }
+
+            > .highlight:last-child {
+                flex: 1 0 auto;
+
+                > * {
+                    height: 100%;
+                }
+            }
         }
     }
 }
